base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: example-app
        image: mroc/example-app
        ports:
        - containerPort: 3000
  selector: 
    matchLabels:
      tier: frontend
