base/example-app-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-clusterip
spec:
  type: ClusterIP
  ports:
  - targetPort: 80
    port: 80
  selector:
    tier: frontend
