base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-node-port
spec:
  type: NodePort
  ports:
  - targetPort: 3000
    port: 3000
    nodePort: 30000
  selector:
    tier: frontend
