base/example-app-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
  - http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: example-app-clusterip
            port:
              number: 80
